css/contact.css
body, .container{
    height: 150vh;
}
.main{
    background-image: url(../images/comics-img1.jpg);
    background-color: #817878;
    background-blend-mode: multiply;
    background-size: cover;
}
h1{
    font-size:xx-large;
    text-transform: uppercase;
    color:#fffefe
}
form, .contact-container{
    display: flex;
    flex-direction: column;
    gap:2vh;
    align-items: center;
}
.form-text{
    width: 40vw;
    height: 6vh;
    background-color: rgba(0, 0, 0, 0.8);
    color: #fff;
    border:none;
}
::placeholder{
    color:rgb(232, 154, 154);
}
.form-text:hover{
    box-shadow: 2px 1px 4px 2px #CE1212;
}
.t-area{
    height:unset;
}
.btndiv{
    display: flex;
    width:100vw;
    justify-content: center;
    gap: 1vw;
}
.button{
    width: 10%;
    height:5vh;
    background-color: #CE1212;
    color: #fff;
}
.button:hover{
    background-color: #fff1f1;
    color:#CE1212;
    cursor: pointer;
}
@media screen and (max-width: 600px) {
    .form-text{
        width: 90%;
    } 
    .button{
        width: 30vw;
    }
}

